[package]
name = "swivel"
version = "0.1.0"
authors = ["Liam Neville <liamgneville@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.14.1"
juniper_rocket = "0.5.1"
rocket = "0.4.2"
serde_json = "1.0.41"
rocket_contrib = "0.4.2"